--- a/ASSET/CSS/styles.css
+++ b/ASSET/CSS/styles.css
@@ -3,203 +3,105 @@
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    font-family: "Concert One", sans-serif;
 }
-h1,h2{
-    font-family: 'Charm', cursive;    
-}
-h3,a {
-    font-family: 'Patrick Hand', cursive;
-}
-a {
-    text-decoration: none;
-}
-body {
-    background-color: #f2f2f2;
-}
-.container-welcome {
-    display: flex;
-    position: absolute;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 30px;
-    padding-top: 10%;
-    left:  200px;
-}
-span {
-    color:rgba(172, 255, 47, 0.746);
-}
-.container-welcome h1 {
-    color: #f2f2f2;
-    padding-top: 55px;
-    font-size: 7rem;
-}
-.container-welcome img {
-    width: 300px;
-    height: 300px;
-}
-/*bienvenida*/
-header {
-    height: 100vh;
-    width: 100%;
-    background-image: url(../Imagenes/Caribbean\ islands.webp);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-header:before {
-    content: "";
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-    color:#f2f2f2;
-    background: #2193b0;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    opacity: 0.8;
-}
-
-
-.h3 {
-    position: absolute;
-    font-size: 2rem;
-    padding-left: 41%;
-    padding-top: 30%;
-    color: #f2f2f2;
-}
-
-.vamos a {
-    margin-top: 34%;
-    margin-left: 49%;
-    padding: 10px;  
-    position: absolute;   
-    border-radius: 15px;
-
-    text-decoration: none;
-    font-size:x-large;
-    color: #f2f2f2;
-    background-color: rgb(20, 136, 136);
-    transition: 1s;
-}
-
-.vamos a:hover {
-    transition: 1s;
-    color: rgb(20, 136, 136);
-    background-color: #f2f2f2;
-}
-/*seccion playas , ciudades y motañas*/
-section {
-    height: 100vh;
-}
-section h2,a{
-    color: #f2f2f2;
-    font-size: 3rem;  
-}
-
-#uno{
-    background-image: url(/ASSET/Imagenes/Seleccion/palmeras.avif);
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin-block: 10em;
-}
-
-br{
-    background-color: black;
-}
-
-.preg{
-    width: 1300px;
-    height: 70px;
-    margin-top: 80px;
-}
-
-.pr{
-    position: absolute;
-    font-family: cursive;
-    color: black;
-    margin-left: 310px;
-    font-size: 4rem;
-    transition: 1s;
-}   
-
-
-
-.lin{
-    width: 600px;
-    border-width: 10px;
-    margin-left: 360px;
-    border-radius: 15px;
-}
-
-
-/*contenedor de playas,ciudades y motañas*/
-.catalogue-container {
-    margin-top: 160px;
+header nav {
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    position:fixed;
+    z-index: 3;
+    
+
+    background-color: #0099ff;
+    color: #fff;
+    padding: 10px;
+    min-width: 90em;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.513);
+}
+header nav ul  {
+    display: flex;
+    gap: 15px;
+
+    font-size: 1.2rem;
+    color:#fff;
+    text-decoration: none;
+    list-style: none;
+}
+header nav ul li a {
+    display: flex;
+    align-items: center;
+
+    color:#fff;
+    text-decoration: none;
+}
+header nav ul li .a:hover {
+    color: #f5f5f5;
+    text-decoration: underline;
+}
+
+/**Info institucional*/
+
+
+body {
+    background-color: #f5f5f5;
+}
+.info-insti {
+    display: flex;
+    justify-content: space-around;
+    gap: 30px;
+    margin-top: 6em;
+    margin-inline: 10em;
+
     
 }
-/*areas playas,ciudades y motañas*/
-
-
-.catalogue-container .uno a {
-    padding: 100px;
-    color: #f2f2f26a;
-    background-image: url(../Imagenes/Seleccion/Playas.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 15px;
-    font-size:3rem;
-    transition: 1s;
-    cursor: pointer;
+.info-insti .Text {
+    margin-block: 3em;
+}
+.info-insti .turistic-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40em;
+    height: 20em;
+}
+/* Eslogans */
+#eslogan {
+    display: flex;
+    gap: 20px;
+    color: #000;
+}
+#e-1 {
+    background-color: #0099ff;   
+    box-shadow: 4px 4px  #000 ;
+    padding: 2px 4px;
+}
+#e-2 {
+    background-color: #ffe60d;
+    box-shadow: 4px 4px  #000 ;
+    padding: 2px 4px;
+}
+#e-3 {
+    background-color: #56ab2f;
+    box-shadow: 4px 4px  #000 ;
+    padding: 2px 4px;
 }
 
-.catalogue-container .dos a {
-    padding: 100px;
-    background-image: url(../Imagenes/Seleccion/Montañas.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 15px;
-    color:#f2f2f26a;
-    font-size:3rem;
-    transition: 1s;
-    cursor: pointer;
+/* Catalogo */
+
+.Catalogo {
+    width: 100%;
+    height: 30em;
+    background-color: #0099ff;
+
+    margin-top: -3px;
 }
 
-.catalogue-container .tres a {
-    padding: 100px;
-    background-image: url(../Imagenes/Seleccion/Ciudades.jpg);
-    background-size: cover;
-    color:#f2f2f26a;
-    font-size:3rem;
-    border-radius: 15px;
-    transition: 1s;
-    cursor: pointer;
-}
-/*opacidad al seleccionar un area*/
-.catalogue-container .uno a:hover {
-    color: #f2f2f2;
-    transition: 1s;
-
-    background-image: url(../Imagenes/Seleccion/playa-opaca.jpg);
-    
-}
-.catalogue-container .dos a:hover {
-    color: #f2f2f2;
-    transition: 1s;
-    background-image: url(../Imagenes/Seleccion/montañas-opaca.jpg);
-}
-.catalogue-container .tres a:hover {
-    color: #f2f2f2;
-    transition: 1s;
-    background-image: url(../Imagenes/Seleccion/unnamed.jpg);
-}
 /*burbujas*/
-.burbujasuno {
-    background: #2193b0;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+ .burbujasuno {
+    background: #2193b0; 
+background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0); 
+background: linear-gradient(to right, #6dd5ed, #2193b0); 
     opacity: 0.8;
     opacity: .3;
     position: absolute;
@@ -211,10 +113,9 @@ background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, F
     animation: burbujas 3s linear infinite;
 }
 .burbujasdos {
-    background: #2193b0;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: #2193b0;  
+background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0); 
+background: linear-gradient(to right, #6dd5ed, #2193b0); 
     opacity: 0.8;
     opacity: .3;
     position: absolute;
@@ -226,10 +127,9 @@ background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, F
     animation: burbujas 3.5s linear infinite;
 }
 .burbujastres {
-    background: #2193b0;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: #2193b0;  
+background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  
+background: linear-gradient(to right, #6dd5ed, #2193b0); 
     opacity: 0.8;
     opacity: .3;
     position: absolute;
@@ -241,10 +141,9 @@ background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, F
     animation: burbujas 3.20s linear infinite;
 }
 .burbujascuatro {
-    background: #2193b0;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: #2193b0; 
+background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0); 
+background: linear-gradient(to right, #6dd5ed, #2193b0); 
     opacity: 0.8;
     opacity: .3;
     position: absolute;
@@ -256,10 +155,9 @@ background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, F
     animation: burbujas 5s linear infinite;
 }
 .burbujascinco {
-    background: #2193b0;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: #2193b0;  
+background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0); 
+background: linear-gradient(to right, #6dd5ed, #2193b0); 
     opacity: 0.8;
     opacity: .3;
     position: absolute;
@@ -271,10 +169,9 @@ background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, F
     animation: burbujas 3s linear infinite;
 }
 .burbujasseis {
-    background: #2193b0;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: #2193b0;  
+background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  
+background: linear-gradient(to right, #6dd5ed, #2193b0); 
     opacity: 0.8;
     opacity: .3;
     position: absolute;
@@ -286,10 +183,9 @@ background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, F
     animation: burbujas 9s linear infinite;
 }
 .burbujassiete {
-    background: #2193b0;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: #2193b0;
+background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);
+background: linear-gradient(to right, #6dd5ed, #2193b0); 
     opacity: 0.8;
     opacity: .3;
     position: absolute;
@@ -301,9 +197,9 @@ background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, F
     animation: burbujas 4.3s linear infinite;
 }
 .burbujasocho {
-    background: #2193b0;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #1488CC;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
     opacity: 0.8;
     opacity: .3;
@@ -316,9 +212,10 @@ background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, F
     animation: burbujas 3.7s linear infinite;
 }
 .burbujasnueve {
-    background: #2193b0;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #1488CC;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ 
     opacity: 0.8;
     opacity: .3;
     position: absolute;
@@ -328,8 +225,8 @@ background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, F
 
     border-radius: 100px;
     animation: burbujas 5.5s linear infinite;
-}
-@keyframes burbujas{
+} 
+ @keyframes burbujas{
     0% {
         opacity: 0;
         bottom: 0;
@@ -342,18 +239,18 @@ background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, F
         bottom: 100vh;
     }
 }
-/* footer */
-footer {
+
+/* footer {
     color: #f5f5f5;
-    background: #0575E6;  /* fallback for old browsers */
-     background: -webkit-linear-gradient(to bottom, #021B79, #0575E6);  /*Chrome 10-25, Safari 5.1-6 */
-     background: linear-gradient(to bottom, #021B79, #0575E6); /*W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+*/
+    background: #0575E6;
+     background: -webkit-linear-gradient(to bottom, #021B79, #0575E6);  
+     background: linear-gradient(to bottom, #021B79, #0575E6); 
     display: flex; 
     justify-content: center;
-    /* background: url(/ASSET/Imagenes/Seleccion/ja.jpg);
+     background: url(/ASSET/Imagenes/Seleccion/ja.jpg);
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;  */
+    background-repeat: no-repeat;  
     height: 20em;
 }
 
@@ -376,7 +273,7 @@ footer {
 }
 .container-footer .info .links-info i:hover{
     color: #f5f5f5;
-}
+} */
 
 
 /* icons */
