--- a/ASSET/styles.css
+++ b/ASSET/styles.css
@@ -30,7 +30,7 @@ header nav {
 
 header nav ul  {
     display: flex;
-    gap: 15px;
+    gap: 20px;
 
     font-size: 1.2rem;
     text-decoration: none;
@@ -42,6 +42,7 @@ header nav ul  {
 header nav ul li a {
     display: flex;
     align-items: center;
+    gap: 5px;
 
     color:#23221f;
     text-decoration: none;
@@ -133,6 +134,16 @@ header nav ul li:hover {
     box-shadow: 10px -10px 0 -3px #f7f7f6, 10px -10px  #464446, 20px -20px 0 -3px #f7f7f6, 20px -20px  #464446 ;
     transition: all 1s;
 }
+
+.Catalogo .contenedor-cards .cards:hover {
+    top: 0px;
+    left: 0px;
+    box-shadow: none;
+    
+    transition:all 90ms;
+}
+
+
 .Catalogo .contenedor-cards .cards h3 {
     font-weight:lighter;
     padding-block: 5px;
@@ -143,28 +154,25 @@ header nav ul li:hover {
     margin-inline: 2px;
     
 }
-.Catalogo .contenedor-cards .cards a {
-    text-align: center;
+.Catalogo .contenedor-cards .cards .button {
     text-decoration: none;
-    color:#23221f;
-    background-color:#ffe70dd3;
-    /* padding-block: 1em; */
-    padding: 0.5em;
-    margin-bottom: 10px;
+    text-transform: uppercase;
+    color: #23221f;
+    outline: 2px solid #fff;
+    padding-inline: 5px;
+    padding-block: 10px;
+    position: relative;
+    overflow: hidden;
     border: 1px solid #464446;
-    transition: all 0.4s;
-}
-.Catalogo .contenedor-cards .cards:hover {
-    top: 0px;
-    left: 0px;
-    box-shadow: none;
-    transition:all 90ms;
+    transition: color 1s;
 }
 
-.Catalogo .contenedor-cards .cards a:hover {
-    background-color: #0099ff;
-    color: #f7f7f6;
-    transition: all 0.4s;
+.Catalogo .contenedor-cards .cards .button:hover {
+    color: #23221f;
+    background-color: #ffe70dd3;
+    word-spacing: 2px;
+    transition: width 1s;
+    
 }
 
 /** Blog's */
@@ -191,183 +199,67 @@ header nav ul li:hover {
 }
 
 
-/* FOOTER */
+/** FOOTER */
+
 footer {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-around;
+    align-items:center;
     gap: 20px;
     padding-block: 10px;
-    background-color: #2193b0;
     width: 100%;
-    height: 10em;
+    height: 20em;
 }
 
-.contenedor-izquierdo {
+.contenedor-derecho {
     display: flex;
     gap: 15px;
 
     font-size: 1.2rem;
     text-decoration: none;
+}
+
+.contenedor-derecho ul {
     list-style: none;
 }
-
-.contenedor-izquierdo ul li a {
+.contenedor-derecho ul li {
+    margin-block: 5px;
+}
+.contenedor-derecho ul li a {
     display: flex;
     align-items: center;
-
-    color:#23221f;
+    gap: 5px;
+    color:#23221fc8;
     text-decoration: none;
+    transition: color 0.2s;
+}
+.contenedor-derecho ul li a:hover {
+    color: #23221f;
+    transition: color 0.2s;
 }
 
-.contenedor-derecho {
-    background-color: red;
-    width: 12em;
-    height: 5em;
+.contenedor-izquierdo {
+    width: 16em;
 }
-/*burbujas*/
- .burbujasuno {
-    background: #2193b0; 
-background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0); 
-background: linear-gradient(to right, #6dd5ed, #2193b0); 
-    opacity: 0.8;
-    opacity: .3;
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    left: 5%;
+.contenedor-izquierdo .encabezado  {
+    display: inline-flex;
+    align-items: center;
+}
 
-    border-radius: 100px;
-    animation: burbujas 3s linear infinite;
+.contenedor-izquierdo .iconos  {
+    display: inline-flex;
+    gap: 10px;
 }
-.burbujasdos {
-    background: #2193b0;  
-background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0); 
-background: linear-gradient(to right, #6dd5ed, #2193b0); 
-    opacity: 0.8;
-    opacity: .3;
-    position: absolute;
-    width: 5rem;
-    height: 5rem;
-    left: 29%;
-
-    border-radius: 100px;
-    animation: burbujas 3.5s linear infinite;
-}
-.burbujastres {
-    background: #2193b0;  
-background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  
-background: linear-gradient(to right, #6dd5ed, #2193b0); 
-    opacity: 0.8;
-    opacity: .3;
-    position: absolute;
-    width: 80px;
-    height: 80px;
-    left: 50%;
-
-    border-radius: 100px;
-    animation: burbujas 3.20s linear infinite;
-}
-.burbujascuatro {
-    background: #2193b0; 
-background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0); 
-background: linear-gradient(to right, #6dd5ed, #2193b0); 
-    opacity: 0.8;
-    opacity: .3;
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    left: 25%;
-
-    border-radius: 100px;
-    animation: burbujas 5s linear infinite;
-}
-.burbujascinco {
-    background: #2193b0;  
-background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0); 
-background: linear-gradient(to right, #6dd5ed, #2193b0); 
-    opacity: 0.8;
-    opacity: .3;
-    position: absolute;
+.contenedor-izquierdo .iconos svg {
     width: 20px;
     height: 20px;
-    left: 47%;
-
-    border-radius: 100px;
-    animation: burbujas 3s linear infinite;
 }
-.burbujasseis {
-    background: #2193b0;  
-background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  
-background: linear-gradient(to right, #6dd5ed, #2193b0); 
-    opacity: 0.8;
-    opacity: .3;
-    position: absolute;
-    width: 2rem;
-    height: 2rem;
-    left: 45%;
-
-    border-radius: 100px;
-    animation: burbujas 9s linear infinite;
+.derechos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-block: 10px;
 }
-.burbujassiete {
-    background: #2193b0;
-background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);
-background: linear-gradient(to right, #6dd5ed, #2193b0); 
-    opacity: 0.8;
-    opacity: .3;
-    position: absolute;
-    width:3rem;
-    height: 3rem;
-    left: 37%;
-
-    border-radius: 100px;
-    animation: burbujas 4.3s linear infinite;
-}
-.burbujasocho {
-    background: #1488CC;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-    opacity: 0.8;
-    opacity: .3;
-    position: absolute;
-    width: 2.7rem;
-    height: 2.7rem;
-    left: 2%;
-
-    border-radius: 100px;
-    animation: burbujas 3.7s linear infinite;
-}
-.burbujasnueve {
-    background: #1488CC;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
- 
-    opacity: 0.8;
-    opacity: .3;
-    position: absolute;
-    width: 70px;
-    height: 70px;
-    left: 15%;
-
-    border-radius: 100px;
-    animation: burbujas 5.5s linear infinite;
-} 
- @keyframes burbujas{
-    0% {
-        opacity: 0;
-        bottom: 0;
-    } 
-    50%{
-        opacity: .4;
-    } 
-    100%{
-        opacity: 0;
-        bottom: 100vh;
-    }
-}
-
 
 /* footer {
     color: #f5f5f5;
@@ -408,4 +300,4 @@ background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, F
 /* icons */
 /* @import url('https://cdn-uicons.flaticon.com/2.0.0/uicons-brands/css/uicons-brands.css') */
 
-/* @import url('https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css') */
+@import url('https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css')
