--- a/ASSET/styles.css
+++ b/ASSET/styles.css
@@ -6,8 +6,13 @@
     font-family: "Concert One", sans-serif;
 }
 
+:root {
+    --frist-color: #23221f;
+    --main-bg-color:#f7f7f6;
+}
+
 body {
-    background-color: #f7f7f6;
+    background-color: var(--main-bg-color);
 }
 header nav {
     display: flex;
@@ -16,9 +21,9 @@ header nav {
     position:fixed;
     z-index: 3;
 
-    background-color: #f7f7f6;
+    background-color: var(--main-bg-color);
     box-shadow:0px 2px 4px #464446;
-    color: #23221f;
+    color: var(--frist-color);
     padding-block: 5px;
     padding-inline: 10px;
     width: auto;
@@ -44,14 +49,14 @@ header nav ul li a {
     align-items: center;
     gap: 5px;
 
-    color:#23221f;
+    color:var(--frist-color);
     text-decoration: none;
 }
 
 
 
 header nav ul li:hover {
-    border-bottom: 2px #23221f solid;
+    border-bottom: 2px var(--frist-color) solid;
 }
 
 
@@ -65,7 +70,7 @@ header nav ul li:hover {
     padding-inline: 10em;
     padding-bottom: 10em;
 
-    color: #f7f7f6;
+    color: var(--main-bg-color);
 
     background-position:center;
     background-repeat: no-repeat;
@@ -87,21 +92,21 @@ header nav ul li:hover {
 #eslogan {
     display: flex;
     gap: 20px;
-    color: #23221f;
+    color: var(--frist-color);
 }
 #e-1 {
     background-color: #0099ff;   
-    box-shadow: 4px 4px  #23221f ;
+    box-shadow: 4px 4px  var(--frist-color) ;
     padding: 2px 4px;
 }
 #e-2 {
     background-color: #ffe60d;
-    box-shadow: 4px 4px  #23221f ;
+    box-shadow: 4px 4px  var(--frist-color) ;
     padding: 2px 4px;
 }
 #e-3 {
     background-color: #79FB00;
-    box-shadow: 4px 4px  #23221f ;
+    box-shadow: 4px 4px  var(--frist-color) ;
     padding: 2px 4px;
 }
 
@@ -111,7 +116,7 @@ header nav ul li:hover {
     width: 100%;
     height: 65em;
     background-color: #f7f7f6;
-    color: #23221f;
+    color: var(--frist-color);
 }
 
 /*? Cards */
@@ -168,7 +173,7 @@ header nav ul li:hover {
 }
 
 .Catalogo .contenedor-cards .cards .button:hover {
-    color: #23221f;
+    color: var(--frist-color);
     background-color: #ffe70dd3;
     word-spacing: 2px;
     transition: width 1s;
@@ -186,7 +191,7 @@ header nav ul li:hover {
     width: 100%;
 
     color: transparent;
-    -webkit-text-stroke: 1px #f7f7f6 ;
+    -webkit-text-stroke: 1px var(--main-bg-color) ;
     font-size: 5rem;
     font-family: Arial, Helvetica, sans-serif;
     background-image: url('./images/Andariego-Jarabacoa.webp');
@@ -234,7 +239,7 @@ footer {
     transition: color 0.2s;
 }
 .contenedor-derecho ul li a:hover {
-    color: #23221f;
+    color: var(--frist-color);
     transition: color 0.2s;
 }
 
