--- a/ASSET/CSS/info-C.css
+++ b/ASSET/CSS/info-C.css
@@ -2,14 +2,18 @@
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
-    font-family: "Concert One", sans-serif;
+    
+    color: var(--frist-color);
 }
 
 :root {
     --frist-color: #23221f;
     --main-bg-color:#f7f7f6;
     --body-bg-color:#e5e3e2;
+    --amarillo:#ffe60d;
     --rabius:15px;
+    --space:2em;
+    --h-size:2rem;
 }
 
 .material-icons {
@@ -54,7 +58,35 @@ main {
     display: flex;
     flex-wrap: wrap;
 }
+h1 {
+    font-size: 4rem;
+    font-family: "Concert One", sans-serif;
+}
+h2 {
+    font-size: var(--h-size);
+    margin-top: var(--space);
+    font-family: "Concert One", sans-serif;
+}
 
+.casa {
+    position: fixed;
+    display: flex;
+    left: 10px;
+    top: 10px;
+    background-color: var(--frist-color);
+    width: 4em;
+    height: 4em;
+    border-radius: 100px;
+    color: var(--main-bg-color);
+    text-decoration: none;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    z-index: 9;
+}
+.casa span {
+    color: var(--main-bg-color);
+}
 /*! Presentacion */
 
 .presentacion {
@@ -67,21 +99,121 @@ main {
     height: 25em;
     border-radius: var(--rabius);
 }
-.casa {
-    position: fixed;
+
+/*! Actividades */
+
+.actividades {
+    margin-block: var(--space);
+    position: relative;
     display: flex;
-    left: 10px;
-    top: 10px;
-    background-color: #23221f;
-    width: 4em;
-    height: 4em;
-    border-radius: 100px;
-    color: var(--main-bg-color);
-    text-decoration: none;
+    width: 100%;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 4em;
+}
+.actividades .catalogo-acti {
+    position: relative;
+    display: flex;
+    gap: 15px;
     align-items: center;
-    justify-content: center;
-    text-align: center;
-    z-index: 9;
+    text-decoration: none;
+    width: 100%;
+}
+.actividades .catalogo-acti img {   
+    width: 8em;
+    border-radius: var(--rabius);
+
+}
+.actividades .catalogo-acti ul {
+    list-style: none;
+}
+
+.actividades .catalogo-acti a {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+
+    color:var(--frist-color);
+    text-decoration: none;
+}
+
+.actividades .catalogo-acti span {
+    color: var(--frist-color);
+}
+/*! H-R */
+.H-R {
+    display: flex;
+}
+
+/*! Hoteles */
+.H-R .hoteles {
+    margin-block: var(--space);
+    position: relative;
+    display: flex;
+    width: 50%;
+    flex-wrap: wrap;
+    gap: 4em;
+}
+.H-R .hoteles .cards {
+    position: relative;
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    text-decoration: none;
+    width: 50%;
+}
+.H-R .hoteles .cards .img-dos img {
+    width: 8em;
+    border-radius: var(--rabius);
+}
+.H-R .hoteles .cards a {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+
+    color:var(--frist-color);
+    text-decoration: none;
+}
+
+.H-R .hoteles .cards span {
+    color: var(--frist-color);
+}
+
+/*! Restaurantes */
+.H-R .restaurantes {
+    margin-block: var(--space);
+    position: relative;
+    display: flex;
+    width: 50%;
+    flex-wrap: wrap;
+    gap: 4em;
+}
+.H-R .restaurantes .cards {
+    position: relative;
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    text-decoration: none;
+    width: 50%;
+}
+.H-R .restaurantes .cards .img-dos img {
+    width: 8em;
+    border-radius: var(--rabius);
+}
+.H-R .restaurantes .cards a {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+
+    color:var(--frist-color);
+    text-decoration: none;
+}
+
+.H-R .restaurantes .cards span {
+    color: var(--frist-color);
+}
+.H-R .restaurantes .cards .estrellas span{
+    color: var(--amarillo);
 }
 @font-face {
     font-family: 'Material Icons';
